--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 Django==2.0.4
 django-cors-headers==2.2.0
+django-guardian==1.4.9
 djangorestframework==3.8.2
 djangorestframework-simplejwt==3.2.3
 idna==2.6
@@ -13,5 +14,6 @@ MarkupSafe==1.0
 PyJWT==1.6.1
 pytz==2018.4
 requests==2.18.4
+six==1.11.0
 uritemplate==3.0.0
 urllib3==1.22
