--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,10 @@ idna==2.6
 itypes==1.1.0
 Jinja2==2.10
 MarkupSafe==1.0
+pyasn1==0.4.3
+pyasn1-modules==0.2.1
 PyJWT==1.6.1
+python-ldap==3.1.0
 pytz==2018.4
 requests==2.18.4
 six==1.11.0
