--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,26 @@
 version: '3'
 services:
-  web:
+  python:
     build: .
     restart: always
-    command:  
-      - "bash -c \"python manage.py runserver 0.0.0.0:8000\"
-      - " && node app.js"
+    command: bash -c "python manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
-      - "8001:8001"
     volumes:
       - content:/docker_moonlight/content
+    depends_on:
+      - node
+
+  node:
+    build: 
+        context: .
+        dockerfile: ./node/
+    restart: always
+    command: bash -c "node app.js"
+    ports:
+      - "8001:8001"
+    volumes:
+      - content:content
 
 volumes:
   content:
