Docker file updated for node

--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -3,11 +3,9 @@ FROM node:8
 # Create app directory
 WORKDIR /usr/src/app
 
-COPY node/package*.json ./
+# Bundle app source
+COPY ./node/ .
 
 RUN npm install
 # If you are building your code for production
 # RUN npm install --only=production
-
-# Bundle app source
-COPY node/ .
