--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,14 +13,14 @@ services:
 
   node:
     build: 
-        context: .
-        dockerfile: ./node/Dockerfile
+        context: node
+        dockerfile: ./Dockerfile
     restart: always
     command: bash -c "node app.js"
     ports:
       - "8001:8001"
-    volumes:
-      - content:content
+    volumes_from:
+      - content
 
 volumes:
   content:
