--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     command: bash -c "node app.js"
     ports:
       - "8001:8001"
-    volumes_from:
-      - content
+    volumes:
+      - content:/usr/src/app/content 
 
 volumes:
   content:
